--- a/Avinash/assets/styles/style.scss
+++ b/Avinash/assets/styles/style.scss
@@ -23,24 +23,27 @@
         margin-top: 20px;
       }
 
-      & img {
+      & .profile {
+        background-image: url("../images/profile.png");
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.06));
         border-radius: 20px;
+        height: 200px;
+        width: 200px;
+        background-size: contain;
+        background-repeat: no-repeat;
 
         @include devices(mobile) {
-          border: 1px solid red;
+          background-image: url("../images/mobile-Profile.png");
           border-radius: 50%;
-          transform: scale(1);
+          background-position: center;
         }
       }
       & h3 {
-        // background-color: aqua;
         width: 100px;
         margin-left: 20px;
         line-height: 50px;
 
         @include devices(mobile) {
-          // border: 1px solid red;
           width: 100%;
           text-align: center;
           margin-top: 10px;
@@ -150,7 +153,7 @@
       align-items: flex-end;
       justify-content: flex-end;
 
-      @include devices(mobile){
+      @include devices(mobile) {
         // border: 1px solid red;
         justify-content: center;
       }
