--- a/Avinash/assets/styles/_mixing.scss
+++ b/Avinash/assets/styles/_mixing.scss
@@ -19,6 +19,24 @@
   }
 }
 
-@mixin bg(){
-    background-color: black;
+@mixin flex(){
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@mixin flex-justify($justify){
+  display: flex;
+  align-items: center;
+  justify-content: $justify;
+}
+@mixin flex-align($align){
+  display: flex;
+  align-items: $align;
+  justify-content: center;
+}
+@mixin custom-flex($align, $justify, $direction){
+  display: flex;
+  align-items: $align;
+  justify-content: $justify;
+  flex-direction: $direction;
 }
